[package]
name = "proxy-checker"
version = "0.0.1"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
url = "2.5.2"
thiserror = "1.0.63"