[package]
name = "proxy-checker"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
url = "2.5.2"
thiserror = "1.0.63"
dotenv = "0.15.0"
config = { version = "0.14.0", features = ["preserve_order"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
tracing = "0.1.40"
minijinja-embed = "2.1.1"
minijinja = "2.1.1"
minijinja-contrib = { version = "2.1.1", features = ["datetime"] }
reqwest = { version = "0.12.5", features = ["json", "stream", "socks", "rustls-tls"], default-features = false }
itertools = "0.13.0"
clokwerk = "0.4.0"
lazy_static = "1.5.0"
futures = "0.3.30"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
mm-base2 = { path = "../mm-base2" }
indexmap = "2.3.0"

[build-dependencies]
minijinja-embed = "2.1.0"
